--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@ html>
         <div id="container">
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Parrafo de adición de contenido en master</p>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
             </div>
         </div>
